flex-wrap ingridients (need to fix)

--- a/src/components/burger-ingridients/burger-ingridients.module.scss
+++ b/src/components/burger-ingridients/burger-ingridients.module.scss
@@ -1,5 +1,12 @@
 .main {
     margin-top: 40px;
+// background-color: teal;
+border: 1px solid teal;
+    max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    // overflow: hidden;
 }
 
 .tab {
@@ -8,6 +15,9 @@
 
 .section {
     margin-top: 40px;
+    display: flex;
+    // background-color: red;
+    flex-direction: column;
 }
 
 .h2 {
@@ -17,4 +27,6 @@
 .products {
     display: flex;
     justify-content: space-between;
+    // background-color: green;
+    flex-wrap: wrap;
 }
